k8s/echo-server/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: echo-server
  labels:
    app.kubernetes.io/name: echo-server
    app.kubernetes.io/component: validation
    app.kubernetes.io/part-of: k8s-homelab
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: echo-server
